--- a/src/css/toolbar.css
+++ b/src/css/toolbar.css
@@ -32,6 +32,11 @@ html[data-theme=dark] .nav-toggle {
   filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(248deg) brightness(105%) contrast(101%);
 }
 
+/* Landing pages have dark backgrounds in light mode - invert nav toggle icon */
+.home .nav-toggle {
+  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(248deg) brightness(105%) contrast(101%);
+}
+
 @media screen and (min-width: 1024px) {
   .nav-toggle {
     display: none;
